--- a/home.css
+++ b/home.css
@@ -58,14 +58,11 @@ button{
      align-items: center;
 }
 .logout-btn, .add-art{
-    width:15%;
+    width:20%;
     padding:15px;
 
 }
-.logo-container {
-    /* background-color: red; */
     
-}
 button:hover{
     background-color: rgb(243, 36, 36);
     color:white;
@@ -91,6 +88,7 @@ button:hover{
     color:black;
     padding:20px;
     border-radius: 5px;
+    height:10rem
 }
 .subject{
     margin-bottom: 20px;
@@ -107,6 +105,12 @@ button:hover{
     margin:auto;
     padding:10px;
 }
+.header-container-mobile{
+    display: none;
+}
+.container-btn{
+    display: none;
+}
 
 
 
@@ -120,6 +124,72 @@ button:hover{
         margin:auto;
         padding:10px;
     }
+    .header-container-mobile{
+        display: block;
+    }
+    .logo-container{
+        display: flex;
+        justify-content: space-around;
+        text-align: right;
+        /* background-color: red; */
+    }
+
+    .container-mobile-nav{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: black;
+
+    }
+    .header-container{
+        display: none;
+    }
+    .menu-toggle {
+        display: block; 
+        /* display: flex;
+        position:absolute ;
+        right :0; */
+    }
+    
+    .btn-menu{
+        background-color: white;
+
+    }
+    .btn-menu:hover{
+        background-color: rgb(192, 185, 185);
+    }
+    .container-btn{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    button{
+        width:100%;
+
+    }
+    .ul-list-mobile{
+        display: none;
+        background-color: black;
+        width:100%;
+        height:200px;
+        text-align: center;
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+    }
+    .ul-list{
+        display: block;
+    
+    }
+    li{
+        padding:5px;
+    }
+   
+    .logo{
+        width:10%;
+        padding:10px;
+    }
+   
 }
 
 @media screen and (max-width:600px){
@@ -132,3 +202,5 @@ button:hover{
         padding:10px;
     }
 }
+
+
