--- a/profile.css
+++ b/profile.css
@@ -112,9 +112,10 @@ button:hover{
 .name{
     margin-top: 20px;
 }
-.logo{
+.logo-profile{
     width:50%;
     border-radius: 50%;
+    
 }
 .img-name-container{
     text-align: center;
@@ -135,6 +136,121 @@ button:hover{
     padding:10px;
 }
 
+/* add home design  */
+
+
+.header-container-mobile{
+    display: none;
+}
+.container-btn{
+    display: none;
+}
+
+.menu-toggle {
+    display: none; /* Hidden by default */
+}
+
+
+
+@media screen and (max-width:780px){
+    .container-all{
+        display: none;
+    }
+    .container-body{
+        display: grid;
+        width:80%;
+        gap:10px;
+        grid-template-columns: 1fr 1fr ;
+        margin:auto;
+        padding:10px;
+    }
+    .header-container-mobile{
+        display: block;
+    }
+    .logo-container{
+        display: flex;
+        justify-content: space-around;
+        text-align: right;
+        /* background-color: red; */
+    }
+    .img-name-container{
+        text-align: center;
+        margin: auto;
+    }
+    .container-mobile-nav{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: black;
+
+    }
+    .header-container{
+        display: none;
+    }
+    .menu-toggle {
+        display: block; 
+        /* display: flex;
+        position:absolute ;
+        right :0; */
+    }
+    
+    .btn-menu{
+        background-color: white;
+
+    }
+    .btn-menu:hover{
+        background-color: rgb(192, 185, 185);
+    }
+    .container-btn{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    button{
+        width:100%;
+
+    }
+    .ul-list-mobile{
+        display: none;
+        background-color: black;
+        width:100%;
+        height:200px;
+        text-align: center;
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+    }
+    .ul-list{
+        display: block;
+    
+    }
+    li{
+        padding:5px;
+    }
+   
+    .logo{
+        width:10%;
+        padding:10px;
+    }
+   
+}
+
+@media screen and (max-width:600px){
+    .container-body{
+        display: grid;
+        width:80%;
+        gap:10px;
+        grid-template-columns: 1fr ;
+        margin:auto;
+        padding:10px;
+    }
+}
+
+
+
+
+/* end home design  */
+
 @media screen and (max-width:780px) {
     .user-article{
         position: relative;
@@ -153,13 +269,18 @@ button:hover{
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-color: rgb(226, 8, 8);
+        /* background-color: rgb(226, 8, 8); */
         height: auto;
         color:white;
         height:400px
     }
     
 }
+
+
+
+
+
 
 @media screen and (max-width:600px) {
     .user-article{
@@ -179,7 +300,7 @@ button:hover{
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-color: rgb(226, 8, 8);
+        /* background-color: rgb(226, 8, 8); */
         height: auto;
         color:white;
         height:400px
