--- a/article.css
+++ b/article.css
@@ -49,7 +49,6 @@ a:hover{
 
 button{
     padding:10px;
-     width:10rem;
      font-size: 1rem;
      font-weight: bold;
      border-radius: 20px;
@@ -57,6 +56,7 @@ button{
      justify-content: center;
      align-items: center;
 }
+
 button:hover{
     background-color: rgb(243, 36, 36);
     color:white;
@@ -100,16 +100,111 @@ button:hover{
 
 
 
+.header-container-mobile{
+    display: none;
+}
+.container-btn{
+    display: none;
+}
+
+.menu-toggle {
+    display: none; /* Hidden by default */
+}
+.logout-btn, .add-art{
+    width:20%;
+    padding:15px;
+
+}
+
+
 @media screen and (max-width:780px){
+    .container-all{
+        display: none;
+    }
     .container-body{
         display: grid;
-        width:90%;
+        width:80%;
         gap:10px;
         grid-template-columns: 1fr 1fr ;
         margin:auto;
         padding:10px;
     }
+    .header-container-mobile{
+        display: block;
+    }
+    .logo-container{
+        display: flex;
+        justify-content: space-around;
+        text-align: right;
+        /* background-color: red; */
+    }
+    .img-name-container{
+        text-align: center;
+        margin: auto;
+    }
+    .container-mobile-nav{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: black;
+
+    }
+    .header-container{
+        display: none;
+    }
+    .menu-toggle {
+        display: block; 
+        /* display: flex;
+        position:absolute ;
+        right :0; */
+    }
+    
+    .btn-menu{
+        background-color: white;
+
+    }
+    .btn-menu:hover{
+        background-color: rgb(192, 185, 185);
+    }
+    .container-btn{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    button{
+        width:80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* background-color: red; */
+
+    }
+    .ul-list-mobile{
+        display: none;
+        background-color: black;
+        width:100%;
+        height:200px;
+        text-align: center;
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+    }
+    .ul-list{
+        display: block;
+    
+    }
+    li{
+        padding:5px;
+    }
+   
+    .logo{
+        width:10%;
+        padding:10px;
+    }
+   
 }
+
+
 
 
 
@@ -142,4 +237,26 @@ input{
 }
 .article{
     padding-bottom: 100px;
+}
+@media screen and (max-width:780px) {
+    .container-body{
+        display: grid;
+        width:90%;
+        /* background-color: red; */
+        gap:10px;
+        grid-template-columns: 1fr 1fr ;
+        margin:auto;
+        padding:10px;
+    }
+    .container-add{
+        /* height:100px; */
+        /* background-color: red; */
+        font-size: 12px;
+        display: flex;
+        
+       
+    }
+    .subject-art, .text-art{
+        width:80%;
+    }
 }
